<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">




        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <SeekBar
                android:id="@+id/seekBar_speed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:max="127"
                android:progress="64"
                android:progressTint="#959595" />

            <View
                android:id="@+id/view_brake"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:background="#4ACC05" />

            <SeekBar
                android:id="@+id/seekBar_direction"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:max="70"
                android:progress="35"
                android:progressTint="#959595" />
        </LinearLayout>

        <TextView
            android:id="@+id/text_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/home_title"
            android:textAlignment="viewStart"
            android:textSize="20sp" />

        <Switch
            android:id="@+id/switchServer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/home_switch" />

        <LinearLayout
            android:id="@+id/layout_myIpAddr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/textView_IPAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/home_ipAddress"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textView_ipTooltip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:textAlignment="center"
                android:textStyle="bold" />
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_inputServer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputServerAddr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/home_client_ip"
                android:visibility="visible" />

        </com.google.android.material.textfield.TextInputLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="24dp" />

        <Button
            android:id="@+id/btnAction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minHeight="48dp"
            android:text="@string/home_Start" />

        <TextView
            android:id="@+id/text_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/fragmentContainerView"
            android:name="com.example.hummerclient.ui.video.CameraFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="5" />


    </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>